@@ -175,7 +175,7 @@ if ($num_defences > 0 && $total_sector_mines > 0 && !$owner && $shipavg > $mine_
                     {
                         // Or they lose!
                         \bnt\bntbounty::cancel ($db, $playerinfo['ship_id']);
-                        db_kill_player ($db, $playerinfo['ship_id']);
+                        \bnt\bntplayer::kill ($db, $playerinfo['ship_id'], false, $langvars);
                     }
                 }
             }
