@@ -60,7 +60,7 @@ elseif ($sure == 2)
     echo "$l_die_vapor<br><br>";
     $l_die_please = str_replace("[logout]", "<a href='logout.php'>" . $l_logout . "</a>", $l_die_please);
     echo $l_die_please. "<br>";
-    db_kill_player ($db, $playerinfo['ship_id'], true);
+    \bnt\bntplayer::kill ($db, $playerinfo['ship_id'], true, $langvars);
     \bnt\bntbounty::cancel ($db, $playerinfo['ship_id']);
     \bnt\adminLog::writeLog ($db, LOG_ADMIN_HARAKIRI, "$playerinfo[character_name]|$ip");
     \bnt\PlayerLog::writeLog ($db, $playerinfo['ship_id'], LOG_HARAKIRI, "$ip");
