@@ -8,6 +8,7 @@ destroy_fighters has been replaced with bntfighters::destroy, which is auto-load
 cancel_bounty has been replaced with bntbounty::cancel, which is auto-loaded from the vendor/bnt directory.
 explode_mines has been replaced with bntmines::explode, which is auto-loaded from the vendor/bnt directory.
 calc_ownership has been replaced with bntownership::calc, which is auto-loaded from the vendor/bnt directory.
+db_kill_player has been replaced with bntplayer::kill, which is auto-loaded from the vendor/bnt directory.
 
 TheMightyDude (1 March 2013)
 --------------------------------------
